# gnina

./: .gitignore  CMakeLists.txt  README.md
gninasrc/: CMakeLists.txt  embed_binary.py  embed_model.py  make_model_cpp.py
gninasrc/gninavis/: cnn_visualization.cpp
gninasrc/lib/: bfgs.cu  bfgs.h  common.h  conf_gpu.cu  cuda_metal_compat.h  device_buffer.cpp  device_buffer.h  gnina_kernels.metal  gpu_math.h  gpu_util.h  gpucode.cu  gpucode.h  grid_gpu.cu  matrix.h  metal_context.h  metal_context.mm  model.cu  non_cache_gpu.cu  precalculate_gpu.cu  precalculate_gpu.h  quaternion.cu  sem.h  torch_model.cpp  tree_gpu.cu  tree_gpu.h  triangular_matrix_index.h
gninasrc/main/: main.cpp
gninasrc/pygnina/: CMakeLists.txt  bindings.cpp
scripts/: deepdock.py  slurm.yaml
test/: CMakeLists.txt
test/gnina/: CMakeLists.txt  test_cache.cu  test_tree.cu
