
find_package(PythonLibs)
find_package(PythonInterp)
if (NOT PYTHONLIBS_FOUND)
  message(STATUS "Python libraries NOT found")
endif()
 
if(BUILD_CONTAINED_PYTHON)
  # create a python library with as few runtime dependencies as possible
  set(Boost_USE_STATIC_LIBS ON)
endif()

# boost_system is header-only since Boost 1.69 and has no cmake config
find_package( Boost COMPONENTS filesystem python${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR} REQUIRED )
find_package(Python3 COMPONENTS NumPy QUIET)
if(Python3_NumPy_FOUND)
  set(PYTHON_NUMPY_INCLUDE_DIR ${Python3_NumPy_INCLUDE_DIRS})
else()
  # Fall back to asking the interpreter (works even without cmake NumPy module)
  execute_process(
    COMMAND ${Python3_EXECUTABLE} -c "import numpy; print(numpy.get_include())"
    OUTPUT_VARIABLE PYTHON_NUMPY_INCLUDE_DIR
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PYTHON_NUMPY_INCLUDE_DIR})

if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
#numpy header has unused function
    set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wno-unused-function")
endif()


set( PYGNINA_SOURCES
 python_streambuf.h
 bindings.cpp
)

set( PYGNINA_PY
 __init__.py
)



file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/pygnina/")

# link

# create a python library 
if(NOT APPLE)
  add_link_options("LINKER:--exclude-libs,ALL")  # avoid exporting symbols (GNU ld only)
endif()
add_library(pygnina SHARED ${PYGNINA_SOURCES})
target_link_libraries(pygnina ${Boost_LIBRARIES} ${CUDA_LIBRARIES} gninalib_static )


# Suppress prefix "lib" because Python does not allow this prefix
set_target_properties(pygnina PROPERTIES
									PREFIX ""
									LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/pygnina/")

if(APPLE)
  # On macOS the linker requires all symbols to be resolved at link time.
  # Python extension modules intentionally leave Python/Boost.Python symbols
  # unresolved (they are provided by the host interpreter at load time).
  # -undefined dynamic_lookup defers resolution to runtime, matching Linux behaviour.
  set_target_properties(pygnina PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
endif()
									
                  
# copy module code
foreach(file ${PYGNINA_PY})
 configure_file(${file}  ${CMAKE_CURRENT_BINARY_DIR}/pygnina/)
endforeach()



# Copy the setup.py file
configure_file(setup.py ${CMAKE_CURRENT_BINARY_DIR}/setup.py)

#TODO: figure out reasonable install, also how to build both python2 and python3
install(CODE "execute_process(COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/setup.py install --prefix ${CMAKE_INSTALL_PREFIX})")
